Feat:Login + WebSecurityConfig

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,35 +14,38 @@
 <div class="container right-panel-active height-500">
     <!-- Sign Up -->
     <div class="container__form container--signup sign-up">
-        <form action="/member/register" class="form" id="form1" method="post">
+        <form class="form" id="form1">
             <h2 class="form__title">Sign Up</h2>
-            <input type="text" placeholder="이름" class="input" name="name"/>
+            <input type="text" placeholder="이름" class="input" name="name" id="name"/>
             <div style="display: flex">
-                <input type="email" placeholder="Email" class="input" name="email"/>
+                <input type="email" placeholder="Email" class="input" name="email" id="email"/>
                 <button type="button" style="margin-left: 20px">중복확인</button>
             </div>
-            <input type="password" placeholder="Password" class="input" name="password" />
-            <input type="password" placeholder="Password 확인" class="input">
+            <input type="password" placeholder="Password" class="input" name="password" id="password"/>
+            <input type="password" placeholder="Password 확인" class="input" id="password-check">
             <span class="error-message"></span>
             <fieldset>
                 <label for="user-register">이용자</label>
                 <input type="radio" id="user-register" name="role" value="이용자"/>
-                <label for="accommodation-provider-register">숙박업자</label>
-                <input type="radio"  id="accommodation-provider-register" name="role" value="숙박업자"/>
+                <label for="accommodation-provider-register">사업자</label>
+                <input type="radio"  id="accommodation-provider-register" name="role" value="사업자"/>
+                <label for="accommodation-provider-register">관리자</label>
+                <input type="radio"  id="administrator" name="role" value="관리자"/>
             </fieldset>
-            <input type="tel" placeholder="Phone Number" name="phone" pattern="[0-9]{11}" required class="input">
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone" pattern="[0-9]{11}" required class="input">
             <small>생일</small>
-            <input type="date" value="2017-06-01" class="input" name="birthDate" >
-            <button class="btn" type="submit">Sign Up</button>
+            <input type="date" class="input" name="birthDate" id="birthDate">
+            <button class="btn sign-up-button" type="submit">Sign Up</button>
         </form>
     </div>
 
     <!-- Sign In -->
     <div class="container__form container--signin">
-        <form action="/member/login" method="post" class="form" id="form2">
+        <form action="/login" method="post" class="form" id="form2">
             <h2 class="form__title">Sign In</h2>
-            <input type="email" placeholder="Email" class="input email" name="email"/>
-            <input type="password" placeholder="Password" class="input password" name="password"/>
+            <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+            <input type="email" placeholder="Email" class="input email" name="username" id="username"/>
+            <input type="password" placeholder="Password" class="input password" name="password" id="pwd"/>
             <a href="#" class="link">Forgot your password?</a>
             <button type="submit" class="btn sign-in-button">Sign In</button>
         </form>
