fix : datepicker 시작일 종료일 설정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,6 @@
 </div>
 <!-- Tour Booking End -->
 
-
 <!-- (인기 숙소) -->
 <div class="container-fluid packages py-5">
     <div class="container py-5">
@@ -61,7 +60,7 @@
             <h1 class="mb-0">인기 숙소 Top6</h1>
         </div>
         <div class="packages-carousel owl-carousel">
-            <div th:each="accommodation : ${highScoreAccommodations}" class="packages-item">
+            <div class="packages-item" th:each="accommodation : ${highScoreAccommodations}">
                 <div class="packages-img">
                     <img alt="Image" class="img-fluid w-100 rounded-top" src="/img/packages-4.jpg">
                     <div class="packages-info d-flex border border-start-0 border-end-0 position-absolute" style="width: 100%; bottom: 0; left: 0; z-index: 5;"></div>
@@ -88,50 +87,6 @@
 
     </div>
 </div>
-
-
-
-
-
-
-<!--&lt;!&ndash; (인기 숙소) &ndash;&gt;-->
-<!--<div class="container-fluid packages py-5">-->
-<!--    <div class="container py-5">-->
-<!--        <div class="mx-auto text-center mb-5" style="max-width: 900px;">-->
-<!--            <h5 class="section-title px-3">Hot accommodations</h5>-->
-<!--            <h1 class="mb-0">인기 숙소 Top6</h1>-->
-<!--        </div>-->
-<!--        <div class="packages-carousel owl-carousel">-->
-
-<!--            <div class="packages-item">-->
-<!--                <div class="packages-img">-->
-<!--                    <img alt="Image" class="img-fluid w-100 rounded-top" src="/img/packages-4.jpg">-->
-<!--                    <div class="packages-info d-flex border border-start-0 border-end-0 position-absolute" style="width: 100%; bottom: 0; left: 0; z-index: 5;">-->
-<!--                    </div>-->
-<!--                    <div class="packages-price py-2 px-4">$349.00</div>-->
-<!--                </div>-->
-<!--                <div class="packages-content bg-light">-->
-<!--                    <div class="p-4 pb-0">-->
-<!--                        <h5 class="mb-0">Venice - Italy</h5>-->
-<!--                        <small class="text-uppercase">Hotel Deals</small>-->
-<!--                        <p class="mb-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt nemo quia quae illum aperiam fugiat voluptatem repellat</p>-->
-<!--                    </div>-->
-<!--                    <div class="row bg-primary rounded-bottom mx-0">-->
-<!--                        <div class="col-6 text-start px-0">-->
-<!--                            <a class="btn-hover btn text-white py-2 px-4" href="#">Read More</a>-->
-<!--                        </div>-->
-<!--                        <div class="col-6 text-end px-0">-->
-<!--                            <a class="btn-hover btn text-white py-2 px-4" href="#">Book Now</a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-
-
 
 <!-- 인기 지역 시작 -->
 <div class="container-fluid ExploreTour py-5">
