comment : 스크립트 파일 적용 안될 때, 가이드 주석

--- a/src/main/resources/templates/layout/head.html
+++ b/src/main/resources/templates/layout/head.html
@@ -39,6 +39,9 @@
         <script crossorigin="anonymous" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
         <script crossorigin="anonymous" integrity="sha512-L4qpL1ZotXZLLe8Oo0ZyHrj/SweV7CieswUODAAPN/tnqN3PA1P+4qPu5vIryNor6HQ5o22NujIcAZIfyVXwbQ==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.standalone.min.css" rel="stylesheet">
+        <!--새로운 스크립트 적용 안될 때
+        1. ?version=n 추가로 확인해보기!
+        2. 페이지 소스 보기 -->
         <script src="/js/common/datepicker.js"></script>
     </section>
 </html>
