--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -27,6 +27,26 @@
 
     <!-- Template Stylesheet -->
     <link href="/css/style.css" rel="stylesheet">
+
+    <!-- JavaScript Libraries -->
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="/lib/easing/easing.min.js"></script>
+    <script defer src="/lib/waypoints/waypoints.min.js"></script>
+    <script defer src="/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script defer src="/lib/lightbox/js/lightbox.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script defer src="/js/main.js"></script>
+
+
+    <!-- Custom Javascript -->
+    <script defer src="/js/review.js"></script>
+
+    <script th:inline="javascript">
+
+    </script>
+
 </head>
 
 <body>
@@ -148,7 +168,7 @@
 <!-- 리뷰 조회 Start -->
 <div class="bg-light">
     <div class="container service py-5">
-        <div class="container py-5" th:each="review:${reviewList}">
+        <div class="container py-5">
             <div class="row g-3">
                 <div class="col-lg-12">
                     <div class="row g-3">
@@ -156,28 +176,28 @@
                             <div class="container py-5">
                                 <div class="row g-3">
                                     <div class="col-md-6 text-md-start text-center" style="font-size: 20px;"
-                                         th:text="${review.content}">
+                                         th:text="${reviewList[0].content}">
                                     </div>
                                     <div class="col-md-6 text-md-end text-center">
                                         <div class="row g-3">
                                             <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="${review.getMemberName()}">
+                                                 th:text="${reviewList[0].getMemberName()}">
                                             </div>
                                             <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="'생성일자 : '+ ${review.getFormattedCreatedAt()}">
+                                                 th:text="'생성일자 : '+ ${reviewList[0].getFormattedCreatedAt()}">
                                             </div>
                                             <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="'수정일자 : '+ ${review.getFormattedUpdatedAt()}">
+                                                 th:text="'수정일자 : '+ ${reviewList[0].getFormattedUpdatedAt()}">
                                                 수정일
                                             </div>
                                             <div class="col-md-3" style="font-size: 15px;"
-                                                 th:text="'별점'+ ${review.getScore()}">
+                                                 th:text="'별점'+ ${reviewList[0].getScore()}">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row mb-3"></div> <!-- 여백을 추가할 빈 줄 -->
                                     <div class="col-md-12 border rounded p-3">
-                                        <div class="mb-2" th:text="${review.getContent()}">
+                                        <div class="mb-2" th:text="${reviewList[0].getContent()}">
                                         </div>
                                     </div>
                                 </div>
@@ -197,28 +217,18 @@
             </div>
         </div>
         <div class="text-center">
-            <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" style="margin-right: 20px" href="#">리뷰 더보기</a>
+            <a id="moreButton" class="btn btn-primary rounded-pill py-3 px-5 mt-2" style="margin-right: 20px">리뷰 더보기</a>
             <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" th:href="@{${accommodation.getId()}+'/comment'}">리뷰 등록</a>
         </div>
     </div>
 </div>
 <!-- 리뷰 조회 End -->
 
+<!-- 리뷰 리스트 -->
+<input type="hidden" id="reviewList" th:value="${reviewList}"/>
+
 <!-- Back to Top -->
 <a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
-
-
-<!-- JavaScript Libraries -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/lib/easing/easing.min.js"></script>
-<script src="/lib/waypoints/waypoints.min.js"></script>
-<script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-<script src="/lib/lightbox/js/lightbox.min.js"></script>
-
-
-<!-- Template Javascript -->
-<script src="/js/main.js"></script>
 </body>
 
 </html>
