--- a/src/main/resources/templates/layout/top-bar.html
+++ b/src/main/resources/templates/layout/top-bar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
   <meta charset="UTF-8">
@@ -16,9 +16,11 @@
       </div>
       <div class="col-lg-4 text-center text-lg-end">
         <div class="d-inline-flex align-items-center" style="height: 45px;">
-          <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>환영합니다!</small></a>
-          <a href="/login"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
-          <a href="/logout"><small class="me-3 text-light"><i class="fas fa-power-off me-2"></i> Log Out</small></a>
+<!--          <sec:authentication property="principal.username" var="principal"/>-->
+<!--          <span sec:authentication></span>-->
+          <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2" sec:authentication="principal.username"></i><i>님 환영합니다</i></small></a>
+          <a href="/login" sec:authorize="isAnonymous()"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
+          <a href="/logout" sec:authorize="isAuthenticated()"><small class="me-3 text-light"><i class="fas fa-power-off me-2"></i> Log Out</small></a>
         </div>
       </div>
     </div>
