--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -181,21 +181,26 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         <!-- 이전 페이지 버튼 -->
-        <li class="page-item" th:class="${currentPage == 1} ? 'disabled' : ''">
-            <a class="page-link" th:href="@{/accommodations(page=${currentPage - 1})}">Prev</a>
+        <li class="page-item" th:class="${currentPage == 0} ? 'page-item disabled' : 'page-item'">
+            <a class="page-link" th:href="@{${'/accommodation?keyword=' + request.getKeyword() + '&startDate=' + request.getStartDate().toString() + '&endDate=' + request.getEndDate().toString() + '&page=' + (currentPage - 1)}}">Prev</a>
         </li>
 
         <!-- 페이지 번호들 -->
-        <li class="page-item" th:each="pageNum : ${#numbers.sequence(1, totalPages)}">
-            <a class="page-link" th:href="@{/accommodations(page=${pageNum})}" th:text="${pageNum}"></a>
+        <li class="page-item"
+            th:each="pageNum : ${#numbers.sequence(1, totalPages)}"
+            th:class="${pageNum == currentPage + 1} ? 'page-item active' : 'page-item'"
+            th:if="${pageNum >= currentPage - 3 and pageNum <= currentPage + 3}">
+            <a class="page-link" th:href="@{${'/accommodation?keyword=' + request.getKeyword() + '&startDate=' + request.getStartDate.toString() + '&endDate=' + request.getEndDate.toString() + '&page=' + pageNum}}" th:text="${pageNum}"></a>
         </li>
 
         <!-- 다음 페이지 버튼 -->
-        <li class="page-item" th:class="${currentPage == totalPages} ? 'disabled' : ''">
-            <a class="page-link" th:href="@{/accommodations(page=${currentPage + 1})}">Next</a>
+        <li class="page-item" th:class="${currentPage + 1 == totalPages} ? 'page-item disabled' : 'page-item'">
+            <a class="page-link" th:href="@{${'/accommodation?keyword=' + request.getKeyword() + '&startDate=' + request.getStartDate.toString() + '&endDate=' + request.getEndDate.toString() + '&page=' + (currentPage + 1)}}">Next</a>
         </li>
     </ul>
 </nav>
+
+
 
 
 <!-- Blog End -->
