--- a/src/main/resources/templates/mypageInfo.html
+++ b/src/main/resources/templates/mypageInfo.html
@@ -11,34 +11,37 @@
 <body>
 <div th:replace="~{/layout/top-bar :: top}" style="background-color: #0b204a"></div>
 <div th:replace="~{/layout/navigation-bar :: nav}" style="background-color: #0c4128"></div>
-<div class="booking" style="width: max-content;height: 100px"></div>
+<div style="background-color: #1a04c4;height: 97px;"></div>
 <div style="display: flex;flex-direction: column;align-items: center;justify-content: center">
     <h2 style="color: #0b204a; margin-top: 88px">내 정보 수정</h2>
-    <h3>이름</h3>
-    <input class="border-box" name="name" th:value="${member.name}">
-    <h3>전화번호</h3>
-    <input class="border-box" name="phone" th:value="${member.phone}">
-    <h3>Email</h3>
-    <input class="border-box" name="email" th:value="${member.email}" disabled>
-    <h3>생년월일</h3>
-    <input class="border-box" name="birthDate" th:value="${member.birthDate}" disabled>
+    <form th:action="@{/memberinfo/{email}/change(email=${member.email})}" th:method="put">
+        <h3>이름</h3>
+        <input class="border-box" name="name" th:value="${member.name}">
+        <h3>전화번호</h3>
+        <input class="border-box" name="phone" th:value="${member.phone}">
+        <h3>Email</h3>
+        <input class="border-box" name="email" th:value="${member.email}" disabled>
+        <h3>생년월일</h3>
+        <input class="border-box" name="birthDate" th:value="${member.birthDate}" disabled>
 
-    <div style="display: flex;justify-content: space-between; gap: 30px">
-        <input type="radio" name="role" value="이용자" th:if="${member.role}=='이용자'" id="user" checked>
-        <label for="user" th:if="${member.role}=='이용자'" style="margin-left: -30px">이용자</label>
-        <input type="radio" name="role" value="이용자" th:unless="${member.role}=='이용자'" id="user" disabled>
-        <label for="user" th:unless="${member.role}=='이용자'" style="margin-left: -30px">이용자</label>
-        <input type="radio" name="role" value="사업자" th:if="${member.role}=='사업자'" id="business" checked>
-        <label for="user" th:if="${member.role}=='사업자'" style="margin-left: -30px">사업자</label>
-        <input type="radio" name="role" value="사업자" th:unless="${member.role}=='사업자'" id="business" disabled>
-        <label for="user" th:unless="${member.role}=='사업자'" style="margin-left: -30px">사업자</label>
-        <input type="radio" name="role" value="관리자" th:if="${member.role}=='관리자'" id="admin" checked>
-        <label for="user" th:if="${member.role}=='관리자'" style="margin-left: -30px">관리자</label>
-        <input type="radio" name="role" value="관리자" th:unless="${member.role}=='관리자'" id="admin" disabled>
-        <label for="user" th:unless="${member.role}=='관리자'" style="margin-left: -30px">관리자</label>
-    </div>
+        <div style="display: flex;justify-content: space-between; gap: 30px; margin-top: 30px">
+            <input type="radio" name="role" value="이용자" th:if="${member.role}=='이용자'" id="user" checked>
+            <label for="user" th:if="${member.role}=='이용자'" style="margin-left: -30px">이용자</label>
+            <input type="radio" name="role" value="이용자" th:unless="${member.role}=='이용자'" id="user" disabled>
+            <label for="user" th:unless="${member.role}=='이용자'" style="margin-left: -30px">이용자</label>
+            <input type="radio" name="role" value="사업자" th:if="${member.role}=='사업자'" id="business" checked>
+            <label for="user" th:if="${member.role}=='사업자'" style="margin-left: -30px">사업자</label>
+            <input type="radio" name="role" value="사업자" th:unless="${member.role}=='사업자'" id="business" disabled>
+            <label for="user" th:unless="${member.role}=='사업자'" style="margin-left: -30px">사업자</label>
+            <input type="radio" name="role" value="관리자" th:if="${member.role}=='관리자'" id="admin" checked>
+            <label for="user" th:if="${member.role}=='관리자'" style="margin-left: -30px">관리자</label>
+            <input type="radio" name="role" value="관리자" th:unless="${member.role}=='관리자'" id="admin" disabled>
+            <label for="user" th:unless="${member.role}=='관리자'" style="margin-left: -30px">관리자</label>
+        </div>
+        <button type="submit" class="btn btn-primary blue" style="margin-top: 30px">변경</button>
+    </form>
+    <button class="btn btn-danger red" style="position: absolute;top: 644px">탈퇴</button>
 </div>
 
-<div th:replace="~{/layout/footer :: footerFragment}"></div>
 </body>
 </html>
