refactor : main.js 내 youtube api 호출 분리

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -133,6 +133,7 @@
 <footer th:replace="~{/layout/footer::footerFragment}"></footer>
 
 <script src="/js/main.js"></script>
+<script src="/js/index.js"></script>
 <script src="/js/popularRegion.js"></script>
 </body>
 
